--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: ansible/ansible-lint@v25.1.2
   verify:
     runs-on: ubuntu-latest
-    needs: check
+    # needs: check
     steps:
       - uses: actions/checkout@v4
         with:
