--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -23,6 +23,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
+      - name: Add pyenv to path
+        run: echo "$HOME/.pyenv/bin" >> "$GITHUB_PATH"
       - name: Run Ansible playbook
         uses: dawidd6/action-ansible-playbook@v3
         with:
