fix paths and linting issues

--- a/dev_work_bootstrap/tasks/darwin.yaml
+++ b/dev_work_bootstrap/tasks/darwin.yaml
@@ -1,5 +1,6 @@
 ---
-- community.general.homebrew:
+- name: Install homebrew forumale
+  community.general.homebrew:
     name:
       - git
       - make
