--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -24,17 +24,20 @@ jobs:
         with:
           fetch-depth: 2
       - name: Add pyenv to path
-        run: echo "$HOME/.pyenv/bin" >> "$GITHUB_PATH"
+        run: |
+          echo "$HOME/.pyenv/bin" >> "$GITHUB_PATH"
+          echo "$HOME/.goenv/bin" >> "$GITHUB_PATH"
+          echo "$HOME/.rbenv/bin" >> "$GITHUB_PATH"
       - name: Run Ansible playbook
         uses: dawidd6/action-ansible-playbook@v3
         with:
           playbook: playbook.yaml
           directory: ./
-  verify-matrix:  
+  verify-matrix:
     needs: verify
     strategy:
       matrix:
-        os: 
+        os:
           - ubuntu-24.04-arm
           - macos-13
           - macos-latest
