--- a/dev_work_bootstrap/meta/main.yml
+++ b/dev_work_bootstrap/meta/main.yml
@@ -13,4 +13,5 @@ galaxy_info:
   license: MIT
   min_ansible_version: "2.1"
   galaxy_tags: []
-dependencies: []
+collections:
+  - community.general
