--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -16,9 +16,14 @@ jobs:
           fetch-depth: 2
       - name: run-ansible-lint
         uses: ansible/ansible-lint@v25.1.2
-  verify:
-    runs-on: ubuntu-latest
-    # needs: check
+  verify-ubuntu:
+    strategy:
+      matrix:
+        os:
+          - ubuntu-24.04-arm
+          - ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    needs: check
     steps:
       - uses: actions/checkout@v4
         with:
@@ -33,12 +38,11 @@ jobs:
         with:
           playbook: playbook.yaml
           directory: ./
-  verify-matrix:
-    needs: verify
+  verify-macos:
+    needs: check
     strategy:
       matrix:
         os:
-          - ubuntu-24.04-arm
           - macos-13
           - macos-latest
     runs-on: ${{ matrix.os }}
@@ -46,6 +50,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
+      - name: Install Ansible
+        run: |
+          brew update
+          brew install ansible
       - name: Add pyenv to path
         run: |
           echo "$HOME/.pyenv/bin" >> "$GITHUB_PATH"
