--- a/dev_work_bootstrap/tasks/main.yaml
+++ b/dev_work_bootstrap/tasks/main.yaml
@@ -223,12 +223,15 @@
           - tf
           - atmos
         remote_src: true
+- name: Set arch for uv download
+  ansible.builtin.set_fact:
+    uv_arch: "{{ 'arm64' if ansible_architecture == 'aarch64' else 'x86_64' }}"
 - name: Install uv
   tags:
     - uv
   ansible.builtin.unarchive:
     src: "https://github.com/astral-sh/uv/releases/latest/download/\
-      uv-{{ ansible_architecture }}-{{ 'apple' if ansible_system == 'Darwin' else 'unknown' }}-\
+      uv-{{ uv_arch }}-{{ 'apple' if ansible_system == 'Darwin' else 'unknown' }}-\
       {{ ansible_system | lower }}{{ '-gnu' if ansible_system == 'Linux' else '' }}.tar.gz"
     remote_src: true
     keep_newer: true
@@ -236,10 +239,10 @@
     dest: $HOME/.local/bin
     creates: $HOME/.local/bin/uvx
     include:
-      - "uv-{{ ansible_architecture }}-\
+      - "uv-{{ uv_arch }}-\
         {{ 'apple' if ansible_system == 'Darwin' else 'unknown' }}-{{ ansible_system | lower }}\
         {{ '-gnu' if ansible_system == 'Linux' else '' }}/uv"
-      - "uv-{{ ansible_architecture }}-\
+      - "uv-{{ uv_arch }}-\
         {{ 'apple' if ansible_system == 'Darwin' else 'unknown' }}-{{ ansible_system | lower }}\
         {{ '-gnu' if ansible_system == 'Linux' else '' }}/uvx"
     extra_opts:
