--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -31,6 +31,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
+      - name: Setup Ansible
+        uses: alex-oleshkevich/setup-ansible@v1.0.1
       - name: Add pyenv to path
         run: |
           echo "$HOME/.pyenv/bin" >> "$GITHUB_PATH"
