--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -31,8 +31,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
-      - name: Ansible CLI
-        uses: tomasnorre/ansible-cli-client@v0.0.7
+      - name: "Install Python"
+        uses: actions/setup-python@v4
+      - name: Install Ansible
+        run: python -m pip install ansible
       - name: Add pyenv to path
         run: |
           echo "$HOME/.pyenv/bin" >> "$GITHUB_PATH"
